--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,79 +1,35 @@
-body {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.3;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1%;
-  background-color: #13293d;
-  color: #fff;
-}
-
-h1 {
-  font-size: 200%;
-}
-
-h2 {
-  margin: 2% 0;
-  font-size: 180%;
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  min-width: 300px;
-}
-
-nav a {
-  color: #b9c6ae;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-nav a:hover {
-  color: #fff;
+nav {
+  background-color: #c0c0c0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
-  display: flex;
-  flex: 1 1 0;
-  max-width: 1200px;
-  margin: 2% auto;
+  background-color: #bdb5bd;
 }
 
-section {
-  flex: 1 1 0;
-  padding-right: 5%;
+#about-me {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
 }
 
-article {
-  border-bottom: 1px solid #d8a47f;
+#work {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-article p {
-  margin: 2% 0;
-  font-size: 110%;
+#contact-me {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  padding: 2%;
-  background-color: #13293d;
-  color: #fff;
+  background-color: #c0c0c0;
 }
 
-@media screen and (max-width: 768px) {
-  header,
-  main {
-    flex-direction: column;
+@media screen and (max-width: 640px) {
+  #about-me {
+    background-color: white;
   }
 
-  section {
-    padding-right: 0;
+  #work {
+    background-color: white;
   }
 }
