--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #c0c0c0;
+  background-color: rebeccapurple;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,13 +7,28 @@ main {
   background-color: #bdb5bd;
 }
 
+img {
+  border: 2px solid #36454f;
+}
+
+h1 {
+  background-color: rebeccapurple;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 26px;
+}
+
 #about-me {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
+  line-height: 1.25;
 }
 
 #work {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #contact-me {
@@ -22,14 +37,4 @@ main {
 
 footer {
   background-color: #c0c0c0;
-}
-
-@media screen and (max-width: 640px) {
-  #about-me {
-    background-color: white;
-  }
-
-  #work {
-    background-color: white;
-  }
 }
