--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,11 @@ h1 {
   font-size: 26px;
 }
 
-h2 {
+h2,
+h3,
+h4 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 18px;
-}
-
-h3 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
 }
 
 header {
@@ -61,6 +58,7 @@ header > nav > ul > li::after {
 
 #work {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  justify-content: center;
 }
 
 #contact-me {
@@ -69,4 +67,24 @@ header > nav > ul > li::after {
 
 footer {
   background-color: var(--light);
+}
+
+.grid-work {
+  flex: 1;
+  display: flex;
+  padding: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.grid-container {
+  flex: 2;
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  flex-direction: column;
 }
