--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,18 @@ body {
   display: flexbox;
 }
 
+a:link {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: rebeccapurple;
+}
+
 h1 {
   background-color: var(--dark);
   height: 40px;
@@ -46,6 +58,12 @@ header > nav > ul > li::after {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
+
+footer {
+  background-color: var(--light);
+  justify-content: center;
+}
+
 #about-me {
   margin-top: 25px;
   margin-bottom: 25px;
@@ -56,17 +74,19 @@ header > nav > ul > li::after {
   line-height: 1.25;
 }
 
-#work {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  justify-content: center;
-}
-
 #contact-me {
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 50px;
+  font-size: 16px;
+  line-height: 3;
+  font-weight: bold;
 }
 
-footer {
-  background-color: var(--light);
+#work {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid-work {
