--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,110 +1,43 @@
-:root {
-  --dark: rebeccapurple;
-  --dark-mid: #36454f;
-  --light-mid: #bdb5bd;
-  --light: #c0c0c0;
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #f5cba7;
 }
 
 html {
-  background-color: var(--light-mid);
-  font-size: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  display: flexbox;
-}
-
-a:link {
-  color: black;
-}
-
-a:visited {
-  color: black;
-}
-
-a:hover {
-  color: rebeccapurple;
-}
-
-h1 {
-  background-color: var(--dark);
-  height: 40px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 26px;
-}
-
-h2,
-h3,
-h4 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 18px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
-  margin: 0;
   display: flex;
-  justify-content: flex-end;
-  align-items: left;
-  padding: 0.5rem 1rem;
-}
-
-header > nav > ul {
-  list-style-type: none;
-  display: inline-flex;
-}
-
-header > nav > ul > li::after {
-  content: "|";
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-footer {
-  background-color: var(--light);
-  justify-content: center;
-}
-
-#about-me {
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-right: 50px;
-  margin-left: 50px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
-  line-height: 1.25;
-}
-
-#contact-me {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-right: 50px;
-  margin-left: 50px;
-  font-size: 16px;
-  line-height: 3;
-  font-weight: bold;
-}
-
-#work {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.grid-work {
-  flex: 1;
-  display: flex;
-  padding: 50px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.grid-container {
-  flex: 2;
-  display: flex;
-  padding: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-@media screen and (max-width: 768px) {
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  margin: 1%;
+  padding: 0;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-me {
+  justify-content: left;
+  align-items: left;
 }
