--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,36 +8,42 @@ html {
   height: 100%;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+nav {
+  margin: 10px;
 }
 
 main {
-  margin: 1%;
-  padding: 0;
-  height: 80%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 10px;
+  margin-top: 20px;
+  display: inline-flex;
+}
+.about-me {
+  font-size: 10px;
 }
 
-.contact-me {
-  justify-content: left;
-  align-items: left;
+.grid-work {
+  align-items: center;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+.container {
+  flex: 3;
+  display: inline;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container2 {
+  flex: 3;
+  display: inline;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container3 {
+  flex: 3;
+  display: inline;
+  justify-content: center;
+  flex-wrap: wrap;
 }
